--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.30.1",
     "primereact": "^10.8.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
